[package]
name = "async-tungstenite"
description = "Async binding for Tungstenite, the Lightweight stream-based WebSocket implementation"
categories = ["web-programming::websocket", "network-programming", "asynchronous", "concurrency"]
keywords = ["websocket", "io", "web", "tokio", "async-std"]
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
license = "MIT"
homepage = "https://github.com/sdroege/async-tungstenite"
repository = "https://github.com/sdroege/async-tungstenite"
documentation = "https://docs.rs/async-tungstenite"
version = "0.27.0"
edition = "2018"
readme = "README.md"
include = ["examples/**/*", "src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
rust-version = "1.61"

[features]
default = ["handshake"]
handshake = ["tungstenite/handshake"]
async-std-runtime = ["async-std", "handshake"]
tokio-runtime = ["tokio", "handshake"]
gio-runtime = ["gio", "glib", "handshake"]
async-tls = ["real-async-tls", "handshake"]
async-native-tls = ["async-std-runtime", "real-async-native-tls", "tungstenite/native-tls"]
tokio-native-tls = ["tokio-runtime", "real-tokio-native-tls", "real-native-tls", "tungstenite/native-tls"]
tokio-rustls-manual-roots = ["__rustls-tls"]
tokio-rustls-webpki-roots = ["__rustls-tls", "webpki-roots"]
tokio-rustls-native-certs = ["__rustls-tls", "rustls-native-certs"]
tokio-openssl = ["tokio-runtime", "real-tokio-openssl", "openssl"]
verbose-logging = []
url = ["tungstenite/url"]

__rustls-tls = ["tokio-runtime", "real-tokio-rustls", "rustls-pki-types", "tungstenite/__rustls-tls"]

[package.metadata.docs.rs]
features = ["async-std-runtime", "tokio-runtime", "gio-runtime", "async-tls", "async-native-tls", "tokio-native-tls"]

[dependencies]
log = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
futures-io = { version = "0.3", default-features = false, features = ["std"] }
pin-project-lite = "0.2"

[dependencies.tungstenite]
version = "0.23"
default-features = false

[dependencies.async-std]
optional = true
version = "1.0"

[dependencies.real-tokio-openssl]
optional = true
version = "0.6"
package = "tokio-openssl"

[dependencies.openssl]
optional = true
version = "0.10"

[dependencies.real-async-tls]
optional = true
version = "0.13"
package = "async-tls"
default-features = false
features = ["client"]

[dependencies.real-async-native-tls]
optional = true
version = "0.5.0"
package = "async-native-tls"

[dependencies.real-native-tls]
optional = true
version = "0.2"
package = "native-tls"

[dependencies.tokio]
optional = true
version = "1.0"
features = ["net"]
default-features = false

[dependencies.real-tokio-native-tls]
optional = true
version = "0.3"
package = "tokio-native-tls"

[dependencies.real-tokio-rustls]
optional = true
version = "0.26"
package = "tokio-rustls"
default-features = false

[dependencies.rustls-pki-types]
optional = true
version = "1.0.1"

[dependencies.rustls-native-certs]
optional = true
version = "0.7"

[dependencies.webpki-roots]
optional = true
version = "0.26"

[dependencies.gio]
optional = true
version = "0.20"

[dependencies.glib]
optional = true
version = "0.20"

[dev-dependencies]
futures = "0.3"
url = "2.0.0"
env_logger = "0.10"
async-std = { version = "1.0", features = ["attributes", "unstable"] }
tokio = { version = "1.0", features = ["full"] }
futures-channel = "0.3"
hyper = { version = "1.0", default-features = false, features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

[dev-dependencies.tungstenite]
version = "0.23"
features = ["url"]

[[example]]
name = "autobahn-client"
required-features = ["async-std-runtime"]

[[example]]
name = "async-std-echo"
required-features = ["async-std-runtime"]

[[example]]
name = "client"
required-features = ["async-std-runtime"]

[[example]]
name = "autobahn-server"
required-features = ["async-std-runtime"]

[[example]]
name = "server"
required-features = ["async-std-runtime"]

[[example]]
name = "echo-server"
required-features = ["async-std-runtime"]

[[example]]
name = "server-headers"
required-features = ["async-std-runtime", "handshake"]

[[example]]
name = "interval-server"
required-features = ["async-std-runtime"]

[[example]]
name = "gio-echo"
required-features = ["gio-runtime"]

[[example]]
name = "gio-echo-server"
required-features = ["gio-runtime"]

[[example]]
name = "tokio-echo"
required-features = ["tokio-runtime"]

[[example]]
name = "server-custom-accept"
required-features = ["tokio-runtime"]
